--- a/pom.xml
+++ b/pom.xml
@@ -8,31 +8,38 @@
 	<properties>
 		<hadoopVersion>2.7.2
 		</hadoopVersion>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		
 	</properties>
 	<dependencies>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.hbase</groupId> -->
-<!-- 			<artifactId>hbase-server</artifactId> -->
-<!-- 			<version>1.3.1</version> -->
-<!-- 		</dependency> -->
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.hbase</groupId> -->
-<!-- 			<artifactId>hbase-client</artifactId> -->
-<!-- 			<version>1.3.1</version> -->
-<!-- 		</dependency> -->
-
-	<dependency>
+		<dependency>
 			<groupId>org.apache.hbase</groupId>
 			<artifactId>hbase-server</artifactId>
-			<version>0.98.6-hadoop2</version>
+			<version>1.3.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.hbase</groupId>
 			<artifactId>hbase-client</artifactId>
-			<version>0.98.6-hadoop2</version>
+			<version>1.3.1</version>
 		</dependency>
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-common</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
+<!-- 	<dependency> -->
+<!-- 			<groupId>org.apache.hbase</groupId> -->
+<!-- 			<artifactId>hbase-server</artifactId> -->
+<!-- 			<version>0.98.6-hadoop2</version> -->
+<!-- 		</dependency> -->
+
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.hbase</groupId> -->
+<!-- 			<artifactId>hbase-client</artifactId> -->
+<!-- 			<version>0.98.6-hadoop2</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.apache.hadoop
 		</groupId>
