--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<hadoopVersion>2.7.2
 		</hadoopVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -23,23 +23,38 @@
 			<artifactId>hbase-client</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-    <dependency>
-      <groupId>org.apache.hbase</groupId>
-      <artifactId>hbase-common</artifactId>
-      <version>1.3.1</version>
-    </dependency>
+		<dependency>
+			<groupId>org.apache.hbase</groupId>
+			<artifactId>hbase-protocol</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.yammer.metrics</groupId>
+			<artifactId>metrics-core</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.xerial.snappy</groupId>
+			<artifactId>snappy-java</artifactId>
+			<version>1.0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hbase</groupId>
+			<artifactId>hbase-common</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 
-<!-- 	<dependency> -->
-<!-- 			<groupId>org.apache.hbase</groupId> -->
-<!-- 			<artifactId>hbase-server</artifactId> -->
-<!-- 			<version>0.98.6-hadoop2</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.hbase</groupId> -->
+		<!-- <artifactId>hbase-server</artifactId> -->
+		<!-- <version>0.98.6-hadoop2</version> -->
+		<!-- </dependency> -->
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.hbase</groupId> -->
-<!-- 			<artifactId>hbase-client</artifactId> -->
-<!-- 			<version>0.98.6-hadoop2</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.hbase</groupId> -->
+		<!-- <artifactId>hbase-client</artifactId> -->
+		<!-- <version>0.98.6-hadoop2</version> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.apache.hadoop
 		</groupId>
@@ -68,11 +83,11 @@
 		</dependency>
 		<!-- Hadoop -->
 		<!-- https://mvnrepository.com/artifact/commons-configuration/commons-configuration -->
-<dependency>
-    <groupId>commons-configuration</groupId>
-    <artifactId>commons-configuration</artifactId>
-    <version>1.6</version>
-</dependency>
+		<dependency>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.6</version>
+		</dependency>
 		<dependency>
 			<groupId>jdk.tools</groupId>
 			<artifactId>jdk.tools</artifactId>
